--- a/Cure.Reports/Resouces/InvoiceResources.resx
+++ b/Cure.Reports/Resouces/InvoiceResources.resx
@@ -142,6 +142,12 @@
   <data name="clinic8" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\clinic8.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Pechat_bzgm" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Pechat bzgm.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Podpis_bzgm" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Podpis_bzgm.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="sign1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\sign1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
